@@ -39,6 +39,7 @@
 - Avoid Chown on windows {pull}18512[18512]
 - Remove fleet admin from setup script {pull}18611[18611]
 - Clean action store after enrolling to new configuration {pull}18656[18656]
+- Avoid watching monitor logs {pull}18723[18723]
 
 ==== New features
 
